--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ratione impedit quas quaerat laboriosam quae voluptas sit. Vitae nisi beatae itaque est accusamus ipsam? Dignissimos culpa iste dolorum, esse dolores expedita consequatur suscipit minus reprehenderit libero quos maxime adipisci laborum veniam molestiae.</h1>
+    <h2> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, consequuntur?</h2>
 </body>
 </html>
