--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
+    <title>Mi portafolio</title>
 </head>
+
 <body>
-    <h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ratione impedit quas quaerat laboriosam quae voluptas sit. Vitae nisi beatae itaque est accusamus ipsam? Dignissimos culpa iste dolorum, esse dolores expedita consequatur suscipit minus reprehenderit libero quos maxime adipisci laborum veniam molestiae.</h1>
-    <h2> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, consequuntur?</h2>
+    <header>
+        <h1>Lucia Ludmila Rojas Freelancer</h1>
+    </header>
+
+    <section>
+        <h2>Desarrolladora Web Fullstack</h2>
+        <p>Justo Daract, San Luis</p>
+    </section>
+
+    <main>
+        <h2>Mis Servicios</h2>
+
+        <section>
+            <h3>Diseño Web</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>
+        </section>
+
+        <section>
+            <h3>Aplicaciones Web</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>    
+        </section>
+
+        <section>
+            <h3>E-Commerce</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>
+        </section>  
+    </main>
+
+    <section>
+        <h2>Contacto</h2>
+    </section>
+    
+    <footer>
+        <p>Todos los derechos reservados. Lucia Ludmila Rojas Freelancer</p>
+    </footer>
+    
 </body>
+
 </html>
