Se creo formulario y se inserto iconos e imagen de fondo

--- a/index.html
+++ b/index.html
@@ -13,40 +13,115 @@
         <h1>Lucia Ludmila Rojas Freelancer</h1>
     </header>
 
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Sobre mi</a>
+        <a href="#">Clientes</a>
+        <a href="#">Contacto</a>
+    </nav>
+
+    <img src="img/fondo.jpg">
     <section>
         <h2>Desarrolladora Web Fullstack</h2>
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88"
+            viewBox="0 0 24 24" stroke-width="1.5" stroke="#6f32be" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <circle cx="12" cy="11" r="3" />
+            <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+        </svg>
+
         <p>Justo Daract, San Luis</p>
+
+        <a href="#">Contactar</a>
+
     </section>
 
     <main>
         <h2>Mis Servicios</h2>
 
         <section>
-            <h3>Diseño Web</h3>
+            <h3>Diseños Web</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40" height="40"
+                viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path
+                    d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+            </svg>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>
         </section>
 
         <section>
-            <h3>Aplicaciones Web</h3>
-
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>    
+            <h3>Mis trabajos</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-device-laptop" width="40"
+                height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <line x1="3" y1="19" x2="21" y2="19" />
+                <rect x="5" y="6" width="14" height="10" rx="1" />
+            </svg>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>
         </section>
 
         <section>
-            <h3>E-Commerce</h3>
-
+            <h3>Redes sociales</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="40"
+                height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <rect x="4" y="4" width="16" height="16" rx="2" />
+                <line x1="8" y1="11" x2="8" y2="16" />
+                <line x1="8" y1="8" x2="8" y2="8.01" />
+                <line x1="12" y1="16" x2="12" y2="11" />
+                <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+            </svg>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, dignissimos.</p>
-        </section>  
+        </section>
     </main>
 
     <section>
         <h2>Contacto</h2>
+
+        <form>
+            <fieldset>
+                <legend>Contactame llenando todos los campos</legend>
+
+                <div>
+                    <label>Nombre</label>
+                    <input type="text" placeholder="Tú Nombre">
+                </div>
+
+                <div>
+                    <label>Telefono</label>
+                    <input type="tel" placeholder="Tú teléfono">
+                </div>
+
+                <div>
+                    <label>Correo</label>
+                    <input type="email" placeholder="Tú Email">
+                </div>
+
+                <div>
+                    <label>Mensaje</label>
+                    <textarea></textarea>
+                </div>
+
+                <div>
+                    <input type="submit" value="Enviar">
+                </div>
+            </fieldset>
+        </form>
     </section>
-    
+
     <footer>
         <p>Todos los derechos reservados. Lucia Ludmila Rojas Freelancer</p>
     </footer>
-    
+
 </body>
 
 </html>
